Mise à jour de la présentation

--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,12 @@ main{
 .footer{
 	background-color:#191919;
 }
+.align-right{
+	float: right;
+}
+.text-center{
+	text-align: center;
+}
 body {
 	font-family: 'Helvetica Neue', 'Arial' sans-serif;
 	font-family: 'Dosis';
@@ -216,7 +222,6 @@ blockquote.right {
 }
 
 #content {
-  width:1370px;
   background: #1e1e1e;
   margin:0 auto;
   overflow: hidden;
@@ -322,7 +327,7 @@ ul.nav > li {
 	text-transform: uppercase;
 	font-size: 15px;
 	height: 120px;
-	line-height: 90px;
+	line-height: 100px;
 	margin: 0px 0;
 	float: right;
 	font-weight: 600; /* Semi bold */
@@ -428,6 +433,9 @@ ul.nav > li {
 
 	#main-nav ul.nav > li.dropdown a:hover {
 		background: transparent;
+	}
+	#main-nav ul.nav li{
+		line-height: 100px;
 	}
 }
 
@@ -1585,7 +1593,6 @@ ul.share a:hover  {
 }
 
 .post {
-	margin: 25px 0 35px;
     border-bottom:1px solid #242424;
 }
 
@@ -1595,7 +1602,6 @@ ul.share a:hover  {
 }
 
 .post .post-image {
-	height: 390px;
 	overflow: hidden;
 }
 
@@ -2164,27 +2170,6 @@ a.next:hover, a.prev:hover {
 	Event Countdown Styles
 -------------------------------------------------------*/
 
-.event-countdown {
-	margin: 50px 0 0;
-}
-
-.event-countdown .register {
-	float:right;
-	height: 40px;
-	text-align: center;
-	background: #db4a37;
-	line-height: 40px;
-	padding: 0px 25px;
-	color: white;
-	text-transform: uppercase;
-	font-size: 18px;
-	display: block;
-	margin-top: 10px;
-}
-
-.event-countdown .register:hover {
-	background: #f04933;
-}
 
 .event-countdown h1 {
 	color: #f04933;
@@ -2242,11 +2227,14 @@ a.next:hover, a.prev:hover {
 	font-size: 36px;
 	display: block;
 	margin: 30px auto 80px;
-	width: 240px;
+	width: 400px;
 }
 
 .event-countdown .buy-ticket:hover {
 	background: #f6c459;
+}
+#countdown{
+	margin: 60px 0 65px;
 }
 
 @media (max-width: 767px) {
@@ -2277,6 +2265,9 @@ a.next:hover, a.prev:hover {
 	.event-countdown .event-logo img {
 		max-width: 100%;
 	}
+	#countdown{
+		margin: 0px 0 0px;
+	}
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -2291,6 +2282,12 @@ a.next:hover, a.prev:hover {
 	.event-countdown h4 span {
 		margin: 0 55px;
 		font-size: 30px;
+	}
+	#countdown{
+		margin: 30px 0 35px;
+	}
+	#main-nav ul.nav li:before{
+		line-height: 57px;
 	}
 }
 
@@ -2687,7 +2684,6 @@ button.close {
 -------------------------------------------------------*/
 
 footer {
-  width:1370px;
   background: #191919;
   margin:0 auto;
   overflow: hidden;
