--- a/partials/prog.html
+++ b/partials/prog.html
@@ -3,7 +3,7 @@
 	<section id="content">
 		<div class="container">
 			<div class="row event-info">
-				<div class="col-sm-4">
+				<div class="span4">
 					<h3 class="event-details">Details</h3>
 					<dl class="dl-horizontal">
 						<dt>Date :</dt>    			<dd>18/1/2014</dd>
@@ -21,7 +21,7 @@
 						<a href="#">Amazon</a>
 					</div>
 				</div>
-				<div class="col-sm-8">
+				<div class="span8">
 					<h3 class="event-desc">Description</h3>
 					<h3>Night of the living fest</h3>
 					<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam volutpat arcu quis pretium imperdiet. Nam rhoncus et eros quis convallis. Maecenas commodo egestas sodales. Morbi iaculis turpis in nulla venenatis, at placerat metus consectetur. Nulla consequat iaculis suscipit. Praesent nisl augue, ullamcorper at tortor sed, tempus laoreet magna. Quisque dictum enim orci, in fermentum nulla bibendum at.</p>
@@ -34,7 +34,7 @@
 			<!-- featured events -->
 			<h2>Featured <span>Events</span></h2>
 			<div class="row">
-				<div class="col-sm-6 col-md-3 event">
+				<div class="span3 event">
 					<div class="event-image">
 						<div class="event-date">
 							<span class="day-of-month">12</span>
@@ -52,7 +52,7 @@
 					</p>
 					<a href="#" class="watch-live">Watch Live</a>
 				</div>
-				<div class="col-sm-6 col-md-3 event">
+				<div class="span3 event">
 					<div class="event-image">
 						<div class="event-date">
 							<span class="day-of-month">09</span>
@@ -70,7 +70,7 @@
 					</p>
 					<a href="#" class="buy-now">Buy Now</a>
 				</div>
-				<div class="col-sm-6 col-md-3 event">
+				<div class="span3 event">
 					<div class="event-image">
 						<div class="event-date">
 							<span class="day-of-month">08</span>
@@ -88,7 +88,7 @@
 					</p>
 					<a href="#" class="buy-now">Buy Now</a>
 				</div>
-				<div class="col-sm-6 col-md-3 event">
+				<div class="span3 event">
 					<div class="event-image">
 						<div class="event-date">
 							<span class="day-of-month">09</span>
