--- a/partials/archive.html
+++ b/partials/archive.html
@@ -4,21 +4,26 @@
 	<section id="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-10 col-xs-offset-1 albums-desc">
-					<p>Nullam eu lectus et tellus malesuada bibendum sed a nisl. Praesent iaculis sem nisi, sed molestie est ullamcorper vitae. Praesent ac tincidunt eros. Duis eget urna convallis, faucibus magna vel, auctor justo. Proin et scelerisque dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#">See below album list.</a></p>
+				<div class="span12 albums-desc">
+					<p class="center">Tandis que la Fdlm Team finit le démontage et le rangement de nos installations, nous nous retournons déjà avec une fierté mêlée de nostalgie sur ce week-end magique qui s'achève.<br>
+Merci aux 600 participants qui ont honoré Malegoude de leur bonne humeur.<br>
+Gratitude pour le travail impressionnant des 20 bénévoles de l'Asso et l'aide spontanée de nombreux festivaliers.<br>
+Mille mercis aux groupes et artistes qui ont animé nos deux scènes et réalisé des JAM SESSIONS d'un niveau remarquable jusqu'à l'aube.<br>
+Mention spéciale pour nos deux sonorisations au dévouement remarquable, Rainbow Spirit, Full Screen Visual, graffeurs ainsi que tous les artistes. Remerciements à la Communauté de Communes de Mirepoix et à tous les partenaires du réseau que nous avons pu tisser pour faire de cette édition 2013 une vraie réussite!<br>
+Merci !</p>
 				</div>
 			</div>
 
-			<ul class="isotope-filters album-filter">
+			<ul class="isotope-filters album-filter col-sm-4 col-sm-push-3">
 				<li class="current"><a href="#" data-filter="*">All Albums</a></li>
 				<li><i class="fa fa-ellipsis-v"></i><a href="#" onclick="return false;" data-filter=".electronic">Electronic</a></li>
 				<li><i class="fa fa-ellipsis-v"></i><a href="#" onclick="return false;" data-filter=".pop">Pop</a></li>
 				<li><i class="fa fa-ellipsis-v"></i><a href="#" onclick="return false;" data-filter=".rock">Rock</a></li>
 			</ul>
 
-			<div class="row albums">
+			<div class="row albums col-sm-11 col-sm-push-1">
 				<!-- albums -->
-				<div class="col-sm-6 col-md-3 album pop">
+				<div class="span3 album pop">
 					<div class="latest-content">
 						<a href="album.html">
 							<div class="latest-content-image">
@@ -37,7 +42,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 album electronic">
+				<div class="span3 album electronic">
 					<div class="latest-content">
 						<a href="album.html">
 							<div class="latest-content-image">
@@ -56,7 +61,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 album rock">
+				<div class="span3 album rock">
 					<div class="latest-content">
 						<a href="album.html">
 							<div class="latest-content-image">
@@ -75,7 +80,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 album electronic">
+				<div class="span3 album electronic">
 					<div class="latest-content">
 						<a href="album.html">
 							<div class="latest-content-image">
@@ -94,7 +99,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 album electronic">
+				<div class="span3 album electronic">
 					<div class="latest-content">
 						<a href="album.html">
 							<div class="latest-content-image">
@@ -113,7 +118,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 album pop">
+				<div class="span3 album pop">
 					<div class="latest-content">
 						<a href="album.html">
 							<div class="latest-content-image">
@@ -132,7 +137,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 album electronic">
+				<div class="span3 album electronic">
 					<div class="latest-content">
 						<a href="album.html">
 							<div class="latest-content-image">
@@ -151,7 +156,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-3 album rock">
+				<div class="span3 album rock">
 					<div class="latest-content">
 						<a href="album.html">
 							<div class="latest-content-image">
@@ -172,11 +177,29 @@
 				</div>
 			</div>
 		</div>
-
-		<ul class="pagination">
-			<li class="current"><a href="#">1</a></li>
-			<li><a href="#">2</a></li>
-			<li><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
-		</ul>
 	</section>
+	<link rel="stylesheet" href="css/isotope.css" />
+	<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
+	<script type="text/javascript">
+		/*
+		 * albums isotope filtering
+		 */
+
+		// cache container
+		var $albums = $('.albums');
+		// initialize isotope
+		if ($albums.doesExist()) 		
+			$albums.isotope();
+
+		// filter items when filter link is clicked
+		$('.isotope-filters.album-filter a').click(function() {
+			var selector = $(this).attr('data-filter');
+			$albums.isotope({ filter: selector });
+
+			$('.isotope-filters.album-filter').find('li').removeClass('current');
+			$(this).parent().addClass('current');
+
+			return false;
+		});
+	</script>
 </main> <!-- end main content area -->
