--- a/partials/contact.html
+++ b/partials/contact.html
@@ -3,7 +3,7 @@
 	<section id="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-10 col-xs-offset-1 contact-desc center">
+				<div class="span10 offset1 contact-desc center">
 					<p>Nullam eu lectus et tellus malesuada bibendum sed a nisl. Praesent iaculis sem nisi, sed molestie est ullamcorper vitae. Praesent ac tincidunt eros. Duis eget urna convallis, faucibus magna vel, auctor justo. Proin et scelerisque dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
 				</div>
 			</div>
@@ -15,43 +15,35 @@
 			</div>
 
 			<div class="row">
-				<div class="col-sm-6">
-					<h2>Send us a message</h2>
+				<div class="span5 offset1">
+					<h2>Contactez nous par email</h2>
 					<form action="http://templates.brentchesny.com/awaaz/red/mail.php" method="post" name="contact-form" id="contact-form">
-						<label for="name">Your Name <span>*</span></label>
+						<label for="name">Votre nom <span>*</span></label>
 						<input type="text" name="name" id="name" value="" required />
-						<label for="email">Your E-Mail <span>*</span></label>
+						<label for="email">Votre E-Mail <span>*</span></label>
 						<input type="email" name="email" id="email" value="" required />
-						<label for="email">Subject</label>
+						<label for="email">Sujet</label>
 						<input type="text" name="subject" id="subject" value="" />
-						<label for="message">Your Message</label>
+						<label for="message">Votre message</label>
 						<textarea name="message" id="message"></textarea>
 						<div class="row">
 							<div class="col-sm-6">
-								<input type="submit" name="sendmessage" id="sendmessage" value="Send Message" />
+								<input type="submit" name="sendmessage" id="sendmessage" value="Envoyer le message" />
 							</div>
 							<div class="col-sm-6 dynamic"></div>
 						</div>
 					</form>
 				</div>
-				<div class="col-sm-6">
-					<h2>Address &amp; contact details</h2>
+				<div class="span5 offset1">
+					<h2>Adresse de contact</h2>
 					<div class="contact-details">
 						<div class="icon">
 							<i class="fa fa-4x fa-map-marker"></i>
 						</div>
 						<p>
-							8901 Marmora Road,<br />
-							Glasgow, D04 89GR.
-						</p>
-					</div>
-					<div class="contact-details">
-						<div class="icon">
-							<i class="fa fa-4x fa-phone-square"></i>
-						</div>
-						<p>
-							(123) 123-4566-234<br />
-							(123) 536-7472-983
+							Association Faites de la Musique,<br />
+							Ferme Gagnoulet,<br>
+							09500 Malegoude
 						</p>
 					</div>
 					<div class="contact-details">
@@ -59,8 +51,7 @@
 							<i class="fa fa-4x fa-envelope"></i>
 						</div>
 						<p>
-							contact@awaaz.com<br />
-							infa@awaaz.com
+							fdlmteam@gmail.com<br />
 						</p>
 					</div>
 				</div>
