--- a/partials/index.html
+++ b/partials/index.html
@@ -13,7 +13,7 @@
 							<span>Min</span>
 							<span>Sec</span>
 						</h4>
-						<a href="#/programmation-malegoude-faites-de-la-musique" class="buy-ticket">Découvrir la line up</a>
+						<a href="#/programmation-malegoude-faites-de-la-musique" class="buy-ticket">Découvrir le programme</a>
 					</div>
 				</div>
 				<script type="text/javascript" src="js/jquery.countdown.js"></script>
