work on Partials

--- a/partials/contact.old.html
+++ b/partials/contact.old.html
@@ -85,7 +85,7 @@
 
 		var marker = new google.maps.Marker({
 			position: latlng,
-			title:"Salle des fêtes de Malegoude"
+			title:""
 		});
 
 		// To add the marker to the map, call setMap();
