--- a/partials/contact.html
+++ b/partials/contact.html
@@ -235,3 +235,31 @@
 		</div>
 	</div>
 </section>
+
+<!-- GMap-->
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="js/vendor/jquery.gmap.min.js"></script>
+<script type="text/javascript">
+	jQuery(document).ready(function(){
+		var latlng = new google.maps.LatLng(43.110995,1.935181);
+		jQuery('.w-map-h').gMap({
+			controls: {
+				panControl: false,
+				zoomControl: true,
+				mapTypeControl: true,
+				scaleControl: false,
+				streetViewControl: false,
+				overviewMapControl: false
+			},
+			'center': latlng,
+			zoom: 8,
+			markers:[
+				{
+					address: "Salle des fêtes de Malegoude",
+					html: "Our room here",
+					popup: true
+				}
+			]
+		});
+	});
+</script>
