Worked on content

--- a/partials/contact.html
+++ b/partials/contact.html
@@ -5,23 +5,14 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<h2><strong>Contact Us</strong></h2>
+				<h2><strong>Contactez-nous !</strong></h2>
 				
 				<div class="w-contacts">
 					<div class="w-contacts-h">
 						<div class="w-contacts-list">
 							<div class="w-contacts-item">
-								<i class="fa fa-map-marker"></i>
-								<span class="w-contacts-item-value">1600 Amphitheatre Parkway, Mountain View, CA 94043, United States</span>
-							</div>
-							<br>
-							<div class="w-contacts-item">
-								<i class="fa fa-phone"></i>
-								<span class="w-contacts-item-value">+321 123 456 7</span>
-							</div>
-							<div class="w-contacts-item">
 								<i class="fa fa-envelope-o"></i>
-								<span class="w-contacts-item-value"><a href="mailto:info@example.com">info@example.com</a></span>
+								<span class="w-contacts-item-value"><a href="mailto:FDLM@gmail.com">FDLM@gmail.com</a></span>
 							</div>
 						</div>
 					</div>
@@ -36,7 +27,7 @@
 			<div class="l-subsection-hh g-html i-cf">
 			
 				<div class="w-map">
-					<div class="w-map-h" style="height: 360px;">
+					<div id="contact-map" style="height: 360px;">
 					</div>
 				</div>
 			
@@ -48,16 +39,16 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<h4 class="highlight"><strong>Send a Message</strong></h4>
+				<h4 class="highlight"><strong>Envoyez nous un message !</strong></h4>
 				
-				<p class="size_big">We bring a personal and effective approach to every project we work on.</p>
+				<p class="size_big">Nous nous engageons à répondre à vos questions et remarques le plus rapidement possible.</p>
 
 				<div class="w-form contacts_form">
 					<div class="w-form-h contacts_form_form">
 						<form class="g-form" action="#" method="post" id="contact_form">
 							<div class="g-form-row" id="name_row">
 								<div class="g-form-row-label">
-									<label class="g-form-row-label-h" for="name">Your Name</label>
+									<label class="g-form-row-label-h" for="name">Votre nom</label>
 								</div>
 								<div class="g-form-row-field">
 									<i class="fa fa-user"></i>
@@ -75,16 +66,6 @@
 								</div>
 								<div class="g-form-row-state" id="email_state"></div>
 							</div>
-							<div class="g-form-row" id="phone_row">
-								<div class="g-form-row-label">
-									<label class="g-form-row-label-h" for="phone">Phone Number</label>
-								</div>
-								<div class="g-form-row-field">
-									<i class="fa fa-phone"></i>
-									<input type="text" name="phone" id="phone">
-								</div>
-								<div class="g-form-row-state" id="phone_state"></div>
-							</div>
 							<div class="g-form-row" id="message_row">
 								<div class="g-form-row-label">
 									<label class="g-form-row-label-h" for="message">Message</label>
@@ -98,7 +79,7 @@
 							<div class="g-form-row">
 								<div class="g-form-row-label"></div>
 								<div class="g-form-row-field">
-									<button class="g-btn type_primary" id="message_send"><span><i class="fa fa-envelope-o"></i>Send Message</span></button>
+									<button class="g-btn type_primary" id="message_send"><span><i class="fa fa-envelope-o"></i>Envoyer le message</span></button>
 								</div>
 							</div>
 						</form>
@@ -118,8 +99,7 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 
-				<p class="subtitle">What we do?</p>
-				<h3 class="highlight"><strong>Powerful websites that look beautiful</strong></h3>
+				<h3 class="highlight"><strong>Qui sommes nous?</strong></h3>
 				
 				<div class="g-hr type_invisible"></div>
 				
@@ -132,10 +112,15 @@
 									<div class="w-iconbox-icon">
 										<i class="fa fa-rocket"></i>
 									</div>
-									<h4 class="w-iconbox-title">From Zero to One</h4>
+									<h4 class="w-iconbox-title">Développement du site</h4>
 								</div>
 								<div class="w-iconbox-text">
-									<p>We are moving from zero to one, not from one to hundred. That means we are focused on creating new solutions, not copying the existing ones.</p>
+									<p>Nous sommes en charge du développement du design, des pages, du choix des photos...</p>
+									<ul>
+										<li>Léo MIEULET</li>
+										<li>Andréa BUISSET</li>
+										<li>...</li>
+									</ul>
 								</div>
 							</div>
 						</div>
@@ -149,10 +134,14 @@
 									<div class="w-iconbox-icon">
 										<i class="fa fa-thumbs-up"></i>
 									</div>
-									<h4 class="w-iconbox-title">Our Level Up</h4>
+									<h4 class="w-iconbox-title">Organisation du festival</h4>
 								</div>
 								<div class="w-iconbox-text">
-									<p>Working with us you will work with professional certified designers and engineers having the vast good experience.</p>
+									<p>C'est grâce à eux que le festival a lieu d'être. Ils prévoient et gèrent à l'avance de toute la préparation du festival.</p>
+									<ul>
+										<li>Gaëtan MIEULET</li>
+										<li>...</li>
+									</ul>
 								</div>
 							</div>
 						</div>
@@ -166,10 +155,14 @@
 									<div class="w-iconbox-icon">
 										<i class="fa fa-heart"></i>
 									</div>
-									<h4 class="w-iconbox-title">Your satisfaction</h4>
+									<h4 class="w-iconbox-title">Les bénévoles de 2013</h4>
 								</div>
 								<div class="w-iconbox-text">
-									<p>Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy.</p>
+									<p>Ils s'occupent de l'organisation et du bon fonctionnement du festival</p>
+									<ul>
+										<li>Gaëtan MIEULET</li>
+										<li>...</li>
+									</ul>
 								</div>
 							</div>
 						</div>
@@ -179,7 +172,7 @@
 				
 				<div class="g-hr type_invisible"></div>
 				
-				<a class="g-btn type_default" href="#portfolio"><span><i class="fa fa-arrow-down"></i>View Works</span></a>
+				<a class="g-btn type_default" href="#association"><span><i class="fa fa-arrow-down"></i>En savoir plus sur l'association</span></a>
 				
 			</div>
 		</div>
@@ -194,14 +187,14 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<h3>The people who have <strong>trusted</strong> us so far</h3>
+				<h3>Nos <strong>sponsors</strong> qui rendent l'évènement <strong>possible</strong></h3>
 				
 				<div class="w-clients type_carousel columns_5">
 					<div class="w-clients-h">
 						<div class="w-clients-list">
 							<div class="w-clients-list-h">
 								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="img/clogo6.png" alt="Client logo" />
+									<img src="http://www.chamonix.com/images/fiche/sitraCOS518219_353917_logo-super-u.gif" alt="Client logo" />
 								</a>
 								<a class="w-clients-item" href="javascript:void(0);">
 									<img src="img/clogo2.png" alt="Client logo" />
@@ -215,19 +208,8 @@
 								<a class="w-clients-item" href="javascript:void(0);">
 									<img src="img/clogo5.png" alt="Client logo" />
 								</a>
-								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="img/clogo2.png" alt="Client logo" />
-								</a>
-								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="img/clogo1.png" alt="Client logo" />
-								</a>
-								<a class="w-clients-item" href="javascript:void(0);">
-									<img src="img/clogo3.png" alt="Client logo" />
-								</a>
 							</div>
 						</div>
-						<a class="w-clients-nav to_prev disabled" href="javascript:void(0)" title="Show previous"></a>
-						<a class="w-clients-nav to_next" href="javascript:void(0)" title="Show next"></a>
 					</div>
 				</div>
 				
@@ -235,31 +217,40 @@
 		</div>
 	</div>
 </section>
+	<script type="text/javascript" src="js/vendor/plugins.js"></script>
 
 <!-- GMap-->
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="js/vendor/jquery.gmap.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initialize"></script>
+<script type="text/javascript" src="js/vendor/jquery.ui.map.full.min.js"></script>
 <script type="text/javascript">
-	jQuery(document).ready(function(){
+	function initialize() {
+		var map;
 		var latlng = new google.maps.LatLng(43.110995,1.935181);
-		jQuery('.w-map-h').gMap({
-			controls: {
-				panControl: false,
-				zoomControl: true,
-				mapTypeControl: true,
-				scaleControl: false,
-				streetViewControl: false,
-				overviewMapControl: false
-			},
+		var mapOptions = {
 			'center': latlng,
-			zoom: 8,
-			markers:[
-				{
-					address: "Salle des fêtes de Malegoude",
-					html: "Our room here",
-					popup: true
-				}
-			]
+			'zoomControl': true,
+			'panControl': true,
+			'streetViewControl': false,	
+			'zoom': 8,
+			'scrollwheel': true,
+			'draggable': true,	
+			'mapTypeControl': true,	
+		};
+
+		map = new google.maps.Map(document.getElementById("contact-map"),
+			mapOptions);
+
+		var marker = new google.maps.Marker({
+			position: latlng,
+			title:""
 		});
-	});
+
+		// To add the marker to the map, call setMap();
+		marker.setMap(map);
+
+		google.maps.event.addDomListener(window, 'load', initialize);
+		google.maps.event.addDomListener(window, 'resize', function() {
+			map.setCenter(latlng);
+		});
+	}
 </script>
