--- a/partials/index.html
+++ b/partials/index.html
@@ -1,6 +1,6 @@
 <section id="home" class="l-section">
 	
-	<div id="parallax_subsection_0" class="l-subsection color_dark with_parallax" style="background-image:url(img/placeholder/1200x800.gif);">
+	<div id="parallax_subsection_0" class="l-subsection color_dark with_parallax" style="background-image:url(http://www.toulouseconcert.com/images/bg4.jpg);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 
@@ -9,7 +9,7 @@
 					<span class="home-heading-line">Voici de quoi poursuivre</span>
 				</h1>
 				
-				<a class="g-btn type_primary size_big" href="#about"><span>Plus d'information sur l'évènement</span></a>
+				<a class="g-btn type_primary size_big" href="#about" target="_self"><span>Continuez notre navigation</span></a>
 
 			</div>
 		</div>
@@ -26,80 +26,14 @@
 				<h2>La prochaine édition du<strong> FDLM</strong> sera dans <br>
 				<strong>16 jours</strong> 17 heures 30 secondes</h2>
 				
-			</div>
-		</div>
-	</div>
-
-	<div class="l-subsection color_alternate">
-		<div class="l-subsection-h">
-			<div class="l-subsection-hh g-html i-cf">
-
-				<p class="subtitle">What we do?</p>
-				<h3 class="highlight"><strong>Powerful websites that look beautiful</strong></h3>
-				
-				<div class="g-hr type_invisible"></div>
-				
-				<div class="g-cols">
-					<div class="one-third">
-					
-						<div class="w-iconbox iconpos_top with_circle">
-							<div class="w-iconbox-h">
-								<div class="w-iconbox-link">
-									<div class="w-iconbox-icon">
-										<i class="fa fa-rocket"></i>
-									</div>
-									<h4 class="w-iconbox-title">From Zero to One</h4>
-								</div>
-								<div class="w-iconbox-text">
-									<p>We are moving from zero to one, not from one to hundred. That means we are focused on creating new solutions, not copying the existing ones.</p>
-								</div>
-							</div>
-						</div>
-						
-					</div>
-					<div class="one-third">
-					
-						<div class="w-iconbox iconpos_top with_circle">
-							<div class="w-iconbox-h">
-								<div class="w-iconbox-link">
-									<div class="w-iconbox-icon">
-										<i class="fa fa-thumbs-up"></i>
-									</div>
-									<h4 class="w-iconbox-title">Our Level Up</h4>
-								</div>
-								<div class="w-iconbox-text">
-									<p>Working with us you will work with professional certified designers and engineers having the vast good experience.</p>
-								</div>
-							</div>
-						</div>
-						
-					</div>
-					<div class="one-third">
-					
-						<div class="w-iconbox iconpos_top with_circle">
-							<div class="w-iconbox-h">
-								<div class="w-iconbox-link">
-									<div class="w-iconbox-icon">
-										<i class="fa fa-heart"></i>
-									</div>
-									<h4 class="w-iconbox-title">Your satisfaction</h4>
-								</div>
-								<div class="w-iconbox-text">
-									<p>Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy.</p>
-								</div>
-							</div>
-						</div>
-						
-					</div>
+				<div>
+				<a class="g-btn type_default" href="#programmation-vendredi"><span> Programme du Vendredi 15 Juin</span></a>
+				<a class="g-btn type_default" href="#programmation-samedi"><span>Programme du Samedi 16 Juin</span></a>
 				</div>
-				
-				<div class="g-hr type_invisible"></div>
-				
-				<a class="g-btn type_default" href="#portfolio"><span><i class="fa fa-arrow-down"></i>View Works</span></a>
-				
 			</div>
 		</div>
 	</div>
+
 </section>
 
 <section id="blog" class="l-section">
@@ -247,10 +181,10 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<p class="subtitle">Qui sommes nous ?</p>
-				<h2 class="highlight"><strong>We are FDLM</strong></h2>
+				<p class="subtitle">Nos artistes</p>
+				<h2 class="highlight"><strong>Un avant goût du festival</strong></h2>
 				
-				<p class="size_big">This is our dedicated team who work day-in and day-out together to bring our clients<br>the most amazing projects for a digitally connected world.</p>
+				<p class="size_big">Nous proposons des styles de musiques éclectiques depuis 2012, voici notre sélection :</p>
 				
 				<div class="g-hr type_invisible"></div>
 				
@@ -261,17 +195,13 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/hassah-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name">Artiste 1</h4>
-										<div class="w-team-member-role">Metal</div>
-										<div class="w-team-member-links">
-											<div class="w-team-member-links-list">
-												<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-												<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-												<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-											</div>
+										<h4 class="w-team-member-name"><a href="#artiste/hassah" target="_blank"><i class="fa fa-chevron-right"></i> Voir Hassah</a></h4>
+										<div class="w-team-member-role">Fusion de Rumba, Rock, Blues, Salsa, Ragga, Disco et Hip Hop sur des textes en Espagnol</div>
+										<div class="w-team-member-role">
+											Présent le vendredi 4h00-6h00 
 										</div>
 									</div>
 								</div>
@@ -280,18 +210,13 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Artiste 2</h4>
-											<div class="w-team-member-role">Electro</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-												</div>
-											</div>
+										<h4 class="w-team-member-name"><a href="#artiste/hassah" target="_blank"><i class="fa fa-chevron-right"></i> Voir Da Krew Lab</a></h4>
+										<div class="w-team-member-role">Electro, Break, Drum'n'Bass, Breakcore, Hip Hop, Tek</div>
+										<div class="w-team-member-role">
+											Présent le vendredi 4h00-6h00 
 										</div>
 									</div>
 								</div>
@@ -300,18 +225,13 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/LesBoozeBrothers-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Artiste 3</h4>
-											<div class="w-team-member-role">Rock</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-												</div>
-											</div>
+										<h4 class="w-team-member-name"><a href="#artiste/hassah" target="_blank"><i class="fa fa-chevron-right"></i> Voir les Booze Brothers</a></h4>
+										<div class="w-team-member-role">Un grand métissage des influences, des genres (rock, hardcore, electro, folk, world, punk) et des langues.</div>
+										<div class="w-team-member-role">
+											Présent le vendredi 4h00-6h00 
 										</div>
 									</div>
 								</div>
@@ -320,20 +240,13 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/placeholder/500x500.gif" alt="member photo" />
+										<img src="img/fdlm/asap-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name">Artiste 4</h4>
-											<div class="w-team-member-role">Dubstep</div>
-											<div class="w-team-member-links">
-												<div class="w-team-member-links-list">
-													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-													<a class="w-team-member-links-item" href="http://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a>
-												</div>
-											</div>
+										<h4 class="w-team-member-name"><a href="#artiste/hassah" target="_blank"><i class="fa fa-chevron-right"></i> Voir ASAP</a></h4>
+										<div class="w-team-member-role">Pop rock Française</div>
+										<div class="w-team-member-role">
+											Présent le vendredi 4h00-6h00 
 										</div>
 									</div>
 								</div>
@@ -348,3 +261,4 @@
 		</div>
 	</div>
 </section>
+	<script type="text/javascript" src="js/vendor/plugins.js"></script>
