--- a/partials/index.html
+++ b/partials/index.html
@@ -184,7 +184,7 @@
 				<p class="subtitle">Nos artistes</p>
 				<h2 class="highlight"><strong>Un avant goût du festival</strong></h2>
 				
-				<p class="size_big">Nous proposons des styles de musiques éclectiques depuis 2012, voici notre sélection :</p>
+				<p class="size_big">Nous proposons des styles de musiques éclectiques depuis 2012, voici notre sélection pour 2014 :</p>
 				
 				<div class="g-hr type_invisible"></div>
 				
@@ -261,4 +261,6 @@
 		</div>
 	</div>
 </section>
-	<script type="text/javascript" src="js/vendor/plugins.js"></script>
+<script type="text/javascript">
+	window.resizeHandler();
+</script>
