slide main text

--- a/partials/index.html
+++ b/partials/index.html
@@ -5,8 +5,8 @@
 			<div class="l-subsection-hh g-html i-cf">
 
 				<h1 class="home-heading">
-					<span class="home-heading-line bold">Style de musique</span>
-					<span class="home-heading-line">Voici de quoi poursuivre</span>
+					<span class="home-heading-line bold">Faites de la Musique</span>
+					<span class="home-heading-line">Le festival de musique en Ariège </span>
 				</h1>
 				
 				<a class="g-btn type_primary size_big" href="#about" target="_self"><span>Continuez notre navigation</span></a>
