Worked on the content of partials

--- a/partials/association.html
+++ b/partials/association.html
@@ -1,1 +1,78 @@
-association.html
+
+
+<!-- page: CONTACT -->
+<section id="contact" class="l-section">
+	
+
+	<div class="l-subsection">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+
+				
+				<h4 class="highlight"><strong>DEVENEZ ADHÉRENT DE L'ASSOCIATION EN 1 MIN !</strong></h4>
+				
+				<p class="size_big">Nous ne partageons aucune de vos autres données personnelles avec un tiers sans votre accord explicite.</p>
+
+				<div class="w-form contacts_form">
+					<div class="w-form-h contacts_form_form">
+						<form class="g-form" action="#" method="post" id="contact_form">
+							<div class="g-form-row" id="name_row">
+								<div class="g-form-row-label">
+									<label class="g-form-row-label-h" for="name">Votre nom</label>
+								</div>
+								<div class="g-form-row-field">
+									<i class="fa fa-user"></i>
+									<input type="text" name="name" id="name">
+								</div>
+								<div class="g-form-row-state" id="name_state"></div>
+							</div>
+							<div class="g-form-row" id="firstname_row">
+								<div class="g-form-row-label">
+									<label class="g-form-row-label-h" for="firstname">Votre prénom</label>
+								</div>
+								<div class="g-form-row-field">
+									<i class="fa fa-user"></i>
+									<input type="text" firstname="firstname" id="firstname">
+								</div>
+								<div class="g-form-row-state" id="firstname_state"></div>
+							</div>
+							<div class="g-form-row" id="email_row">
+								<div class="g-form-row-label">
+									<label class="g-form-row-label-h" for="email">Adresse mail (obligatoire)</label>
+								</div>
+								<div class="g-form-row-field">
+									<i class="fa fa-envelope"></i>
+									<input type="email" name="email" id="email">
+								</div>
+								<div class="g-form-row-state" id="email_state"></div>
+							</div>
+							<div class="g-form-row" id="phone_row">
+								<div class="g-form-row-label">
+									<label class="g-form-row-label-h" for="phone">Téléphone (facultatif) :</label>
+								</div>
+								<div class="g-form-row-field">
+									<i class="fa fa-phone"></i>
+									<input type="text" name="phone" id="phone">
+								</div>
+								<div class="g-form-row-state" id="phone_state"></div>
+							</div>
+							<div class="g-form-row">
+								<div class="g-form-row-label"></div>
+								<div class="g-form-row-field">
+									<button class="g-btn type_primary" id="message_send"><span><i class="fa fa-envelope-o"></i>Send Message</span></button>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+				
+
+
+			</div>
+		</div>
+	</div>
+		
+</section>
+<script type="text/javascript">
+	window.resizeHandler();
+</script>
