--- a/partials/contact.html
+++ b/partials/contact.html
@@ -6,7 +6,7 @@
 		<div class="l-subsection-h" style="margin-top:50px;">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<h2><strong>Contactez-nous !</strong></h2>
+				<h2 class="highlight"><strong>Contactez-nous !</strong></h2>
 				
 				<div class="w-contacts">
 					<div class="w-contacts-h">
