--- a/partials/archive.html
+++ b/partials/archive.html
@@ -1,205 +1,193 @@
-
-<!-- main content area -->
-<main>
-	<section id="content">
-		<div class="container">
-			<div class="row">
-				<div class="span12 albums-desc">
-					<p class="center">Tandis que la Fdlm Team finit le démontage et le rangement de nos installations, nous nous retournons déjà avec une fierté mêlée de nostalgie sur ce week-end magique qui s'achève.<br>
-Merci aux 600 participants qui ont honoré Malegoude de leur bonne humeur.<br>
-Gratitude pour le travail impressionnant des 20 bénévoles de l'Asso et l'aide spontanée de nombreux festivaliers.<br>
-Mille mercis aux groupes et artistes qui ont animé nos deux scènes et réalisé des JAM SESSIONS d'un niveau remarquable jusqu'à l'aube.<br>
-Mention spéciale pour nos deux sonorisations au dévouement remarquable, Rainbow Spirit, Full Screen Visual, graffeurs ainsi que tous les artistes. Remerciements à la Communauté de Communes de Mirepoix et à tous les partenaires du réseau que nous avons pu tisser pour faire de cette édition 2013 une vraie réussite!<br>
-Merci !</p>
-				</div>
-			</div>
-
-			<ul class="isotope-filters album-filter col-sm-4 col-sm-push-3">
-				<li class="current"><a href="#" data-filter="*">All Albums</a></li>
-				<li><i class="fa fa-ellipsis-v"></i><a href="#" onclick="return false;" data-filter=".electronic">Electronic</a></li>
-				<li><i class="fa fa-ellipsis-v"></i><a href="#" onclick="return false;" data-filter=".pop">Pop</a></li>
-				<li><i class="fa fa-ellipsis-v"></i><a href="#" onclick="return false;" data-filter=".rock">Rock</a></li>
-			</ul>
-
-			<div class="row albums col-sm-11 col-sm-push-1">
-				<!-- albums -->
-				<div class="span3 album pop">
-					<div class="latest-content">
-						<a href="album.html">
-							<div class="latest-content-image">
-								<img src="images/photos/photo26.jpg" alt="" />
-							</div>
-							<div class="latest-content-info">
-
-								<div class="meta">
-									<div class="icon">
-										<i class="fa fa-headphones"></i>
+<!-- page: OUR TEAM -->
+<section id="team" class="l-section col-sm-10 col-sm-push-1">
+	
+	<div class="l-subsection">
+		<div class="l-subsection-h">
+			<div class="l-subsection-hh g-html i-cf">
+			
+				<p class="subtitle">Who we are?</p>
+				<h2 class="highlight"><strong>We are CORSA</strong></h2>
+				
+				<p class="size_big">This is our dedicated team who work day-in and day-out together to bring our clients<br>the most amazing projects for a digitally connected world.</p>
+				
+				<div class="g-hr type_invisible"></div>
+				
+				<div class="w-team">
+					<div class="w-team-h">
+						<div class="w-team-list">
+						
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
-									<h4>Large Worldwide</h4>
-									<p>Pethouse Records, Real Recordings</p>
+									<div class="w-team-member-meta">
+										<h4 class="w-team-member-name">Ruslan Sukhar</h4>
+										<div class="w-team-member-role">CEO</div>
+										<div class="w-team-member-links">
+											<div class="w-team-member-links-list">
+												<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+												<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+												<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</a>
-					</div>
-				</div>
-				<div class="span3 album electronic">
-					<div class="latest-content">
-						<a href="album.html">
-							<div class="latest-content-image">
-								<img src="images/photos/photo25.jpg" alt="" />
-							</div>
-							<div class="latest-content-info">
-
-								<div class="meta">
-									<div class="icon">
-										<i class="fa fa-headphones"></i>
+						
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
-									<h4>Desire Evita</h4>
-									<p>PhetHouse Records</p>
+									<div class="w-team-member-meta">
+										<div class="w-team-member-meta-h">
+											<h4 class="w-team-member-name">Aleksandr Kovalev</h4>
+											<div class="w-team-member-role">Senior designer</div>
+											<div class="w-team-member-links">
+												<div class="w-team-member-links-list">
+													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</a>
-					</div>
-				</div>
-				<div class="span3 album rock">
-					<div class="latest-content">
-						<a href="album.html">
-							<div class="latest-content-image">
-								<img src="images/photos/photo24.jpg" alt="" />
-							</div>
-							<div class="latest-content-info">
-
-								<div class="meta">
-									<div class="icon">
-										<i class="fa fa-headphones"></i>
+					
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
-									<h4>Fly Away Monster</h4>
-									<p>Spinder Records</p>
+									<div class="w-team-member-meta">
+										<div class="w-team-member-meta-h">
+											<h4 class="w-team-member-name">Roman Bayburin</h4>
+											<div class="w-team-member-role">Senior developer</div>
+											<div class="w-team-member-links">
+												<div class="w-team-member-links-list">
+													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</a>
-					</div>
-				</div>
-				<div class="span3 album electronic">
-					<div class="latest-content">
-						<a href="album.html">
-							<div class="latest-content-image">
-								<img src="images/photos/photo26.jpg" alt="" />
-							</div>
-							<div class="latest-content-info">
-
-								<div class="meta">
-									<div class="icon">
-										<i class="fa fa-headphones"></i>
+					
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
-									<h4>Large Worldwide</h4>
-									<p>Pethouse Records, Real Recordings</p>
+									<div class="w-team-member-meta">
+										<div class="w-team-member-meta-h">
+											<h4 class="w-team-member-name">Stepan Astionov</h4>
+											<div class="w-team-member-role">UX Expert</div>
+											<div class="w-team-member-links">
+												<div class="w-team-member-links-list">
+													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+													<a class="w-team-member-links-item" href="http://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</a>
-					</div>
-				</div>
-				<div class="span3 album electronic">
-					<div class="latest-content">
-						<a href="album.html">
-							<div class="latest-content-image">
-								<img src="images/photos/photo25.jpg" alt="" />
-							</div>
-							<div class="latest-content-info">
 
-								<div class="meta">
-									<div class="icon">
-										<i class="fa fa-headphones"></i>
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
-									<h4>Desire Evita</h4>
-									<p>PhetHouse Records</p>
+									<div class="w-team-member-meta">
+										<h4 class="w-team-member-name">Olga Semenova</h4>
+										<div class="w-team-member-role">Manager</div>
+										<div class="w-team-member-links">
+											<div class="w-team-member-links-list">
+												<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+												<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+												<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</a>
-					</div>
-				</div>
-				<div class="span3 album pop">
-					<div class="latest-content">
-						<a href="album.html">
-							<div class="latest-content-image">
-								<img src="images/photos/photo24.jpg" alt="" />
-							</div>
-							<div class="latest-content-info">
-
-								<div class="meta">
-									<div class="icon">
-										<i class="fa fa-headphones"></i>
+						
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
-									<h4>Fly Away Monster</h4>
-									<p>Spinder Records</p>
+									<div class="w-team-member-meta">
+										<div class="w-team-member-meta-h">
+											<h4 class="w-team-member-name">Ruslan Farkhutdinov</h4>
+											<div class="w-team-member-role">Designer</div>
+											<div class="w-team-member-links">
+												<div class="w-team-member-links-list">
+													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</a>
-					</div>
-				</div>
-				<div class="span3 album electronic">
-					<div class="latest-content">
-						<a href="album.html">
-							<div class="latest-content-image">
-								<img src="images/photos/photo17.jpg" alt="" />
-							</div>
-							<div class="latest-content-info">
-
-								<div class="meta">
-									<div class="icon">
-										<i class="fa fa-headphones"></i>
+					
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
-									<h4>Large Worldwide</h4>
-									<p>Real Recordings, Pethouse</p>
+									<div class="w-team-member-meta">
+										<div class="w-team-member-meta-h">
+											<h4 class="w-team-member-name">Yuliya Lebedeva</h4>
+											<div class="w-team-member-role">Developer</div>
+											<div class="w-team-member-links">
+												<div class="w-team-member-links-list">
+													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</a>
-					</div>
-				</div>
-				<div class="span3 album rock">
-					<div class="latest-content">
-						<a href="album.html">
-							<div class="latest-content-image">
-								<img src="images/photos/photo25.jpg" alt="" />
-							</div>
-							<div class="latest-content-info">
-
-								<div class="meta">
-									<div class="icon">
-										<i class="fa fa-headphones"></i>
+					
+							<div class="w-team-member">
+								<div class="w-team-member-h">
+									<div class="w-team-member-image">
+										<img src="img/placeholder/500x500.gif" alt="member photo" />
 									</div>
-									<h4>Desire Evita</h4>
-									<p>PhetHouse Records</p>
+									<div class="w-team-member-meta">
+										<div class="w-team-member-meta-h">
+											<h4 class="w-team-member-name">Alina Komarova</h4>
+											<div class="w-team-member-role">Manager</div>
+											<div class="w-team-member-links">
+												<div class="w-team-member-links-list">
+													<a class="w-team-member-links-item" href="http://www.fb.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+													<a class="w-team-member-links-item" href="http://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+													<a class="w-team-member-links-item" href="http://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+													<a class="w-team-member-links-item" href="http://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest"></i></a>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</a>
+					
+						</div>
 					</div>
 				</div>
+				
 			</div>
 		</div>
-	</section>
-	<link rel="stylesheet" href="css/isotope.css" />
-	<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
-	<script type="text/javascript">
-		/*
-		 * albums isotope filtering
-		 */
+	</div>
+		
+</section>
 
-		// cache container
-		var $albums = $('.albums');
-		// initialize isotope
-		if ($albums.doesExist()) 		
-			$albums.isotope();
-
-		// filter items when filter link is clicked
-		$('.isotope-filters.album-filter a').click(function() {
-			var selector = $(this).attr('data-filter');
-			$albums.isotope({ filter: selector });
-
-			$('.isotope-filters.album-filter').find('li').removeClass('current');
-			$(this).parent().addClass('current');
-
-			return false;
-		});
-	</script>
-</main> <!-- end main content area -->
+<script type="text/javascript">
+	window.resizeHandler();
+</script>
