--- a/partials/association.html
+++ b/partials/association.html
@@ -15,7 +15,7 @@
 
 				<div class="w-form contacts_form">
 					<div class="w-form-h contacts_form_form">
-						<form class="g-form" action="#" method="post" id="contact_form">
+						<form class="g-form" action="http://faitesdelamusique.vieassociative.fr/" method="post" id="contact_form">
 							<div class="g-form-row" id="name_row">
 								<div class="g-form-row-label">
 									<label class="g-form-row-label-h" for="name">Votre nom</label>
