--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -35,11 +35,12 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="l-subsection color_dark with_parallax full_height" style="background-image:url(img/placeholder/parallax.png);">
 
-	<div id="parallax_subsection_1" class="l-subsection color_dark with_parallax" style="background-image:url(img/placeholder/parallax.png);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
-			
+					<!--
 				<h4 class="highlight"><strong>Envoyez nous un message !</strong></h4>
 				
 				<p class="size_big">Nous nous engageons à répondre à vos questions et remarques le plus rapidement possible.</p>
@@ -86,13 +87,14 @@
 						</form>
 					</div>
 				</div>
-				
+				-->
 			</div>
 		</div>
 	</div>
 </section>
 
 <!-- page: ABOUT -->
+<!--
 <section id="about">
 	
 
@@ -179,8 +181,10 @@
 		</div>
 	</div>
 </section>
+-->
 
 <!-- page: SERVICES -->
+<!--
 <section id="services">
 	
 	
@@ -218,8 +222,9 @@
 		</div>
 	</div>
 </section>
-
+-->
 <!-- GMap-->
+<!--
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initialize"></script>
 <script type="text/javascript" src="js/vendor/jquery.ui.map.full.min.js"></script>
 <script type="text/javascript">
@@ -258,3 +263,4 @@
 <script type="text/javascript">
 	window.resizeHandler();
 </script>
+-->
