remove old markup

--- a/app/partials/archive.html
+++ b/app/partials/archive.html
@@ -1,5 +1,5 @@
 <!-- page: OUR TEAM -->
-<section id="team" class="l-section col-sm-10 col-sm-push-1">
+<section id="team" class="l-section">
 	
 	<div class="l-subsection">
 		<div class="l-subsection-h">
