--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -28,7 +28,8 @@
 			<div class="l-subsection-hh g-html i-cf">
 			
 				<div class="w-map">
-					<div id="contact-map" style="height: 360px;">
+					<div id="contact-map" style="height: 400px;">
+						    <leaflet markers="markers" layers="layers" center="center"></leaflet>
 					</div>
 				</div>
 			
